package edu.hitsz.bombAct;

public interface bombActivate {
    void update();
}
